.provarCaches/00D410000011HE0EAM/objects/rstk__pocontainer__c.object
<CustomObject>
    <description>pocontainer__c; BOC</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pocontainer_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp;  rstk__pocontainer_containerid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pocontainer_containerid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_aesnumber1__c</fullName>
        <inlineHelpText>The AES number is the Automated Export System number used for export clearance from the  USA. It is provided by US customs and then added to shipping or airline paperwork.</inlineHelpText>
        <label>AES Number for Supplier1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_aesnumber2__c</fullName>
        <inlineHelpText>The AES number is the Automated Export System number used for export clearance from the  USA. It is provided by US customs and then added to shipping or airline paperwork.</inlineHelpText>
        <label>AES Number for Supplier2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_aesnumber3__c</fullName>
        <inlineHelpText>The AES number is the Automated Export System number used for export clearance from the  USA. It is provided by US customs and then added to shipping or airline paperwork.</inlineHelpText>
        <label>AES Number for Supplier3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_askmaxf__c</fullName>
        <inlineHelpText>The maximum allowable temperature in Fahrenheit during shipping.</inlineHelpText>
        <label>Requested Shipping Temp Max (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_askminf__c</fullName>
        <inlineHelpText>The minimum allowable temperature in Fahrenheit during shipping.</inlineHelpText>
        <label>Requested Shipping Temp Min (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_batchno__c</fullName>
        <inlineHelpText>Used on interim containers for reporting purposes, allowing the user to locate all containers/releases from the original batch.  User defined.</inlineHelpText>
        <label>Batch Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_bookingno__c</fullName>
        <label>Booking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_carrier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>Interim Shipment Containers</relationshipLabel>
        <relationshipName>pocontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_class5122__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this is potentially hazardous material that must be immediately collected from port due to restrictions on hazardous items.</inlineHelpText>
        <label>Class 5.1 or 2.2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_comment__c</fullName>
        <inlineHelpText>User defined comments regarding this interim shipment.  Not required.</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_containerid__c</fullName>
        <inlineHelpText>Identification of this interim shipment container automatically set by the system.</inlineHelpText>
        <label>Container ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_contutilization__c</fullName>
        <inlineHelpText>% of this container being utilized.  Manual entry, not required.</inlineHelpText>
        <label>Container Utilization</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_converted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Converted To Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_desc__c</fullName>
        <inlineHelpText>User-defined description of this interim container.  Not required.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Valid company division for this record.  If single-div company, this is the default division.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Interim Shipment Containers</relationshipLabel>
        <relationshipName>pocontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_havecpc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>CPC Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_havedgn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DGN Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_hotshipment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this shipment is to be expedited.</inlineHelpText>
        <label>Hot Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_itemmaxf__c</fullName>
        <inlineHelpText>Maximum internal temperature in Fahrenheit for this container during shipping.</inlineHelpText>
        <label>Product Shipping Temp Max (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_itemminf__c</fullName>
        <inlineHelpText>Minimum internal temperature in Fahrenheit for this container during shipping.</inlineHelpText>
        <label>Product Shipping Temp Min (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_loadondate__c</fullName>
        <inlineHelpText>Date field.  Date this interim container will be loaded.</inlineHelpText>
        <label>Load On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_loadontime__c</fullName>
        <inlineHelpText>Time of day on date shipment will be loaded.  Confirmed by Consolidation Center.  Not required.</inlineHelpText>
        <label>Load On Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_poconctr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Consolidation Center handling this shipment.  From consolidation center master.  Required.</inlineHelpText>
        <label>Consolidation Center</label>
        <referenceTo>rstk__poconctr__c</referenceTo>
        <relationshipLabel>Interim Shipment Containers</relationshipLabel>
        <relationshipName>pocontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_poconttype__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Valid container type from container master.  Required.</inlineHelpText>
        <label>Shipment Container Type</label>
        <referenceTo>rstk__poconttype__c</referenceTo>
        <relationshipLabel>Interim Shipment Containers</relationshipLabel>
        <relationshipName>pocontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_portcutdate__c</fullName>
        <label>Port Cut Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_portrouting2__c</fullName>
        <label>Port Routing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>pocontainer_pr1</fullName>
                </value>
                <value>
                    <fullName>pocontainer_pr2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_portrouting__c</fullName>
        <label>Port Routing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_poship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Display only.  The inbound shipping number for this container.</inlineHelpText>
        <label>Inbound Shipper</label>
        <referenceTo>rstk__poship__c</referenceTo>
        <relationshipLabel>Interim Shipment Containers</relationshipLabel>
        <relationshipName>pocontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_povend1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Supplier for item or items on this shipment.</inlineHelpText>
        <label>Supplier1</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Interim Shipment Containers</relationshipLabel>
        <relationshipName>povend1pocontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_povend2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Supplier for item or items on this shipment.</inlineHelpText>
        <label>Supplier2</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Interim Shipment Containers (Supplier2)</relationshipLabel>
        <relationshipName>povend2pocontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_povend3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Supplier for item or items on this shipment.</inlineHelpText>
        <label>Supplier3</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Interim Shipment Containers (Supplier3)</relationshipLabel>
        <relationshipName>povend3pocontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_priority__c</fullName>
        <inlineHelpText>Low, Medium or High.  Select from pull-down.  For reporting purposes only.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_referloop__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox.  If checked, this tells Chemsource that this material needs to be backloaded because it is part of a dedicated loop.</inlineHelpText>
        <label>Container Release Paperwork Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_sealnumber__c</fullName>
        <inlineHelpText>The number on the seal of the loaded unit indicating it is ready for shipment.</inlineHelpText>
        <label>Seal Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_serialno__c</fullName>
        <inlineHelpText>Serial number associated with this specific container. Not required.</inlineHelpText>
        <label>Container Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_setpointf__c</fullName>
        <inlineHelpText>Requested internal mean temperature during shipping in Fahrenheit.  Only pertains to reefer containers.</inlineHelpText>
        <label>Set Point Requested (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_sugmidf__c</fullName>
        <inlineHelpText>The average temperature this container should be held to during shipping.</inlineHelpText>
        <label>Product Temp Mid-Point (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontainer_tempcheck__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox.  If checked, shipping temperature must be controlled based on min and max parameters entered on this record.</inlineHelpText>
        <label>Temperature Control Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Interim Shipment Container</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__Interim_Shipment_Containers_KH</fullName>
        <columns>NAME</columns>
        <columns>rstk__pocontainer_div__c</columns>
        <columns>rstk__pocontainer_containerid__c</columns>
        <columns>rstk__pocontainer_desc__c</columns>
        <columns>rstk__pocontainer_serialno__c</columns>
        <columns>rstk__pocontainer_poconctr__c</columns>
        <columns>rstk__pocontainer_converted__c</columns>
        <columns>rstk__pocontainer_poship__c</columns>
        <columns>rstk__pocontainer_loadondate__c</columns>
        <columns>rstk__pocontainer_loadontime__c</columns>
        <columns>rstk__pocontainer_priority__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__pocontainer_div__c</field>
            <operation>contains</operation>
            <value>boc</value>
        </filters>
        <label>Interim Shipment Containers - KH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Interim_Shipment_Containers</fullName>
        <columns>NAME</columns>
        <columns>rstk__pocontainer_div__c</columns>
        <columns>rstk__pocontainer_containerid__c</columns>
        <columns>rstk__pocontainer_desc__c</columns>
        <columns>rstk__pocontainer_serialno__c</columns>
        <columns>rstk__pocontainer_poconctr__c</columns>
        <columns>rstk__pocontainer_converted__c</columns>
        <columns>rstk__pocontainer_poship__c</columns>
        <columns>rstk__pocontainer_loadondate__c</columns>
        <columns>rstk__pocontainer_loadontime__c</columns>
        <columns>rstk__pocontainer_priority__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Interim Shipment Containers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interim Shipment Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__containerid_validation</fullName>
        <active>true</active>
        <description>Container ID is required and once set cannot be modified</description>
        <errorConditionFormula>(ISNEW() &amp;&amp; ISBLANK(rstk__pocontainer_containerid__c)) || 
(!ISNEW() &amp;&amp; ISCHANGED(rstk__pocontainer_containerid__c))</errorConditionFormula>
        <errorMessage>Container ID is required and once set cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__loadontime_validation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(rstk__pocontainer_loadontime__c) &amp;&amp; !REGEX( rstk__pocontainer_loadontime__c , &apos;\\d*\\d:\\d\\d&apos;)</errorConditionFormula>
        <errorMessage>Invalid value specified for Load On Time. Value must be between 00:01 and 23:59 (inclusive).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__poconctr_validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() &amp;&amp; ISBLANK(rstk__pocontainer_poconctr__c)) || 
(!ISNEW() &amp;&amp; ISCHANGED(rstk__pocontainer_poconctr__c))</errorConditionFormula>
        <errorMessage>Consolidation Center is required and once set cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__poconctr_validation2</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pocontainer_poconctr__r.rstk__poconctr_div__c &lt;&gt;  rstk__pocontainer_div__c</errorConditionFormula>
        <errorMessage>Consolidation Center must belong to the Container Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__poconttype_validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() &amp;&amp; ISBLANK(rstk__pocontainer_poconttype__c)) || 
(!ISNEW() &amp;&amp; ISCHANGED(rstk__pocontainer_poconttype__c))</errorConditionFormula>
        <errorMessage>Container Type is required and once set cannot be modified</errorMessage>
    </validationRules>
</CustomObject>